[gd_scene load_steps=7 format=3 uid="uid://dsrq28d6oc8ws"]

[ext_resource type="Texture2D" uid="uid://dwbxvbsah0of3" path="res://assets/ui.png" id="1_o8opt"]
[ext_resource type="Script" uid="uid://ufgxqdona0ar" path="res://ui/skill_button.gd" id="2_of60f"]
[ext_resource type="Theme" uid="uid://bi3fc10geaq1s" path="res://ui/yoho_theme.tres" id="3_gwmwb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_of60f"]
atlas = ExtResource("1_o8opt")
region = Rect2(56, 56, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwmwb"]
atlas = ExtResource("1_o8opt")
region = Rect2(56, 8, 32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_of60f"]
line_spacing = 0.0
font_size = 8
outline_size = 4
outline_color = Color(0.176471, 0.192157, 0.207843, 1)

[node name="SkillButton" type="TextureButton"]
self_modulate = Color(0.4, 0.4, 0.4, 1)
z_index = 1
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
pivot_offset = Vector2(16, 16)
texture_normal = SubResource("AtlasTexture_of60f")
texture_disabled = SubResource("AtlasTexture_gwmwb")
script = ExtResource("2_of60f")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -21.0
offset_right = 22.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
text = "0/0"
label_settings = SubResource("LabelSettings_of60f")
horizontal_alignment = 1
vertical_alignment = 2

[node name="IconTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -9.0
offset_right = 9.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2

[node name="OuterLine2D" type="Line2D" parent="."]
z_as_relative = false
width = 4.0
default_color = Color(0.176, 0.192, 0.208, 1)

[node name="InnerLine2D" type="Line2D" parent="."]
z_as_relative = false
width = 2.0
default_color = Color(0.22, 0.239, 0.263, 1)

[node name="Panel" type="Panel" parent="."]
visible = false
self_modulate = Color(0.75, 0.75, 0.75, 1)
z_index = 99
custom_minimum_size = Vector2(132, 52)
layout_mode = 0
offset_left = 30.0
offset_top = 3.0
offset_right = 158.0
offset_bottom = 51.0
theme = ExtResource("3_gwmwb")

[node name="DescriptionLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -19.0
offset_right = 59.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/italics_font_size = 6
theme_override_font_sizes/normal_font_size = 6
theme_override_font_sizes/bold_font_size = 6
bbcode_enabled = true
text = "[color=\"ffffffff\"][b][/b][/color]
[i][/i]
"
vertical_alignment = 3

[connection signal="editor_state_changed" from="." to="." method="_on_editor_state_changed"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
